src/ui/snapshots/state/migration/data_loading/complete_state.snap
---
source: src/ui/state/migration/data_loading.rs
assertion_line: 1387
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                              Migration Analysis                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────┐"
"│████████████████████████████████████100.0% ███████████████████████████████████│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────┐"
"│Status: Analysis complete                                                     │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│               Analysis completed! Press any key to continue...               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
