src/ui/snapshots/state/migration/data_loading/error_state.snap
---
source: src/ui/state/migration/data_loading.rs
assertion_line: 1354
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                              Migration Analysis                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────┐"
"│                                     0.0%                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────┐"
"│Error:                                                                        │"
"│Failed to connect to Azure DevOps API                                         │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│                         Press q to quit or r to retry                        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
