src/ui/snapshots/state/migration/data_loading/fetching_prs.snap
---
source: src/ui/state/migration/data_loading.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                  Migration Analysis                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                         0.0%                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Fetching pull requests...                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                              Press q to cancel analysis                                              │"
"│                                  Please wait while we analyze your pull requests...                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
